# spreadsheet-handling

./: .coverage  .gitattributes  .gitignore  AGENT.md  CLAUDE.md  Makefile  Makefile.old  README.adoc  README.md  pyproject.toml  repo.txt  src_and_tests.txt
.github/workflows/: release.yml
audit/: cell_codec_package_review.adoc  compact_multiaxis_package_review.adoc  coupling_map.json  domain_post_cleanup_state_review.adoc  fk_helper_consolidation_closure.adoc  fk_helper_consolidation_post_implementation_review.adoc  fk_helper_f3_consumer_verification.adoc  fk_helper_lifecycle_and_meta_review.adoc  fk_helper_meta_path_inventory.adoc  legend_reader_consolidation_review.adoc  meta_flattening_rg_observations.adoc  package_formation_review.adoc  refactoring_candidates.adoc
daten/: hintergrund.xlsx
docs/: attributes.adoc
docs/ai_info/: _ai_info.adoc  agent_rules.adoc  architecture_primer.adoc  concepts_fk_helpers.adoc  conventions.adoc  git_and_workflow.adoc  interfaces_and_gates.adoc  project_context.adoc  project_memory_rename_runbook.adoc  project_memory_workflow.adoc  repository_boundaries.adoc  review_instructions.adoc
docs/arc42_guide/: arcitecture_guide_arc42.adoc
docs/backlog/: BUG-COLUMN-LEVEL-PRESENTATION-META-READBACK-P5.adoc  BUG-COLUMN-LEVEL-PRESENTATION-META-READBACK-P5_review.adoc  BUG-CROSS-CARRIER-META-ROUNDTRIP.adoc  BUG-CROSS-CARRIER-META-ROUNDTRIP_review.adoc  BUG-GENERATED-META-CONSTRAINT-ACCUMULATION-P4A.adoc  BUG-HELPER-CLEANUP-CONTRACT-AND-NAN-SEMANTICS-P4A.adoc  BUG-HELPER-CLEANUP-CONTRACT-P4A.adoc  BUG-ODS-REIMPORT-REPEATED-CELL-MEMORY-EXPLOSION.adoc  BUG-REIMPORT-PROMOTION-HELPER-COLUMN-LEAKAGE-P4A.adoc  BUG-RUNTIME-META-PERSISTENCE-BOUNDARY-P4A.adoc  BUG-UNRESOLVED-HELPER-VALUE-NAN-SEMANTICS-P4A.adoc  BUG-XLSX-WORKBOOK-VIEW-BLOB-READBACK-P4A.adoc  BUG-XLSX-WORKBOOK-VIEW-BLOB-READBACK-P4A_review.adoc  BUG-XLSX-WORKBOOK-VIEW-CANONICAL-META-LOSS-P4A.adoc  BUG-XLSX-WORKBOOK-VIEW-CANONICAL-META-LOSS-P4A_review.adoc  FTR-BETA-RELEASE-PUBLISH-GAPS-P4A.adoc  FTR-CARRIER-BLOB-DECODER-CONSOLIDATION-P4A.adoc  FTR-CARRIER-LEGEND-META-HELPERS-CONSOLIDATION-P4A.adoc  FTR-CELL-ALIGNMENT-ROUNDTRIP-P5.adoc  FTR-CELL-ALIGNMENT-ROUNDTRIP-P5_review.adoc  FTR-CELL-CODEC-FUNCTIONAL-MODEL-P5.adoc  FTR-CELL-CODEC-FUNCTIONAL-MODEL-P5_review_functional_model.adoc  FTR-CELL-CODEC-LEGACY-CODE-ROW-RETIREMENT-P4A.adoc  FTR-COLUMN-GROUP-RENDER-CAPABILITY-P5.adoc  FTR-COMPACT-MULTIAXIS-INVENTORY-P5.adoc  FTR-CONCEPT-DOCS-CLEANUP-P5.adoc  FTR-CONSUMER-WORKFLOW-MANAGEMENT-UI.adoc  FTR-CROSS-REPO-RELEASE-ORCHESTRATION-P6.adoc  FTR-CROSS-REPO-RELEASE-ORCHESTRATION-P6_review.adoc  FTR-DEMO-AUTOSYNC.adoc  FTR-DEMO-CI-SMOKE-AND-LEGACY-TARGET-CLEANUP-P5.adoc  FTR-DEMO-CI-SMOKE-AND-LEGACY-TARGET-CLEANUP-P5_review.adoc  FTR-DEMO-REPO-INTEGRATION-P4A.adoc  FTR-DEMO-USER-LAUNCH-FLOWS-AND-REVEAL-WALKTHROUGHS-P5.adoc  FTR-DEMO-VISUAL-WALKTHROUGH-ASSETS-P5.adoc  FTR-DEMO-VISUAL-WALKTHROUGH-ASSETS-P5_review.adoc  FTR-DERIVED-PROVENANCE-LIFECYCLE-P4A.adoc  FTR-DISTRIBUTION-PEX.adoc  FTR-DOCUMENTATION-PUBLICATION.adoc  FTR-DOCUMENTATION-SEPARATION.adoc  (+129 more)
docs/cold_storage/: _cold_storage.adoc  index.json
docs/dev_guide/: dev_guide.adoc
docs/developer_guide/: developer_guide.adoc
docs/functional_model/: functional_model.adoc
docs/general_info/: _general_info.adoc  project_evolution_narrative.adoc  project_status.adoc
docs/human_info/: _human_info.adoc
docs/internal_guide/: backlog.txt  internal_guide.adoc
docs/pages/: index.adoc  root_index.adoc
docs/release_notes/: release_notes.adoc
docs/semantic_model/: 01_management_summary.adoc  02_relation_to_other_models.adoc  03_problem_statement.adoc  04_ambiguity_policy.adoc  05_external_inspirations.adoc  06_project_semantic_model.adoc  07_overlapping_semantic_sets.adoc  08_lifecycle_and_update_semantics.adoc  09_registry_role.adoc  10_roundtrip_walkthroughs.adoc  11_conflict_and_precedence_questions.adoc  12_contract_matrices.adoc  13_semantic_guards.adoc  14_versioning_and_evolution.adoc  15_adoption_strategy.adoc  16_planned_ftrs.adoc  (+3 more)
docs_generated/: .gitignore
project_memory/: README.adoc
project_meta/: README.adoc
registries/: meta_registry.yaml  pipeline_step_registry.json
scripts/: build_doc_user_guide.sh  build_docs_pages.sh  merge_snapshots.sh  merged_to_dev.sh  print_delete_merged.sh  reformation_slice.sh  repo_snapshot.sh  start_coversion.sh
scripts/spreadsheet_handling/: README.md  json2sheet.py  out.xlsx  pyproject.toml  requirements-dev.txt  sheet2json.py
scripts/spreadsheet_handling/core/: refs.py
scripts/spreadsheet_handling/src/spreadsheet_handling/: __init__.py  _version.py  logging_utils.py
scripts/spreadsheet_handling/src/spreadsheet_handling/cli/: __init__.py  json2sheet.py  sheet2json.py  sheets_pack.py  sheets_unpack.py
scripts/spreadsheet_handling/src/spreadsheet_handling/core/: __init__.py  df_build.py  fk.py  flatten.py  indexing.py  paths.py  unflatten.py  validate.py  validation.py
scripts/spreadsheet_handling/src/spreadsheet_handling/engine/: __init__.py  config.py  orchestrator.py
scripts/spreadsheet_handling/src/spreadsheet_handling/examples/: pipeline_basic.yml
scripts/spreadsheet_handling/src/spreadsheet_handling/io_backends/: __init__.py  base.py  csv_backend.py  excel_backend.py  excel_xlsxwriter.py  ods_backend.py
scripts/spreadsheet_handling/src/spreadsheet_handling/pipeline/: pipeline.py
scripts/spreadsheet_handling/tests/: test_cli_main_pack.py  test_csv_backend.py  test_fk_custom_id_field.py  test_fk_helpers_pack.py  test_fk_helpers_unit_engine.py  test_fk_parantheses_guard.py  test_fk_roundtrip.py  test_indexing_multiindex_unit.py  test_libre_smoke.py  test_order_stability.py  test_roundtrip.py  test_validate_duplicates.py  test_validate_integratioin_pack.py  test_validate_missing_fk.py
tests/: README.adoc  conftest.py
tools/: check_source_style.py  concat_files_core.sh  ensure_pip.sh  pages_publish_check.sh  pip_install_spec.sh  readme_links_check.sh  release_check.sh  release_status.sh  repo_snapshot.sh  repo_snapshot_multi.sh  source_style_allowlist.yaml
(+1478 files in other folders)
