[project]
name = "spreadsheet-handling"
description = "Composable pipelines for spreadsheets (JSON/YAML/CSV/XLSX) with FK helpers, validation, and IO routing."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Stefan Schade" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "odfpy>=1.4.1",
  "XlsxWriter>=3.0",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5",
  "ruff>=0.4",
  "black>=24",
  "autopep8>=2",
]

[project.scripts]
sheets-run    = "spreadsheet_handling.cli.apps.run:main"
sheets-pack   = "spreadsheet_handling.cli.apps.sheets_pack:main"
sheets-unpack = "spreadsheet_handling.cli.apps.sheets_unpack:main"

[project.urls]
Homepage = "https://github.com/StefanSchade/spreadsheet-handling"
Issues   = "https://github.com/StefanSchade/spreadsheet-handling/issues"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spreadsheet_handling*"]
exclude = ["tests*", "tmp*", "target*", "data*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme   = "node-and-date"
write_to       = "src/spreadsheet_handling/_version.py"
fallback_version = "0.0.0"

# ---- Tool-Konfigurationen ----

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Basis-Regeln (PEP8-Fehler & Name/Import)
select = ["E", "F"]
# Black-kompatible Ausnahmen
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = [
    "unit: fast isolated tests, normally located under tests/unit/",
    "integ: cross-layer or backend-facing integration tests, normally located under tests/integration/",
    "arch: architecture, dependency, contract, or semantic invariant tests under tests/architecture/",
    "guardrail: tests whose primary purpose is to prevent architectural or semantic drift",
    "xlsx_ir: tests specifically targeting the XLSX IR-based spreadsheet path",
    "ods: tests specifically targeting the ODS / Calc spreadsheet path",
    "legacy: historical or deprecated tests excluded from the default run",
    "prehex: tests from the quarantined pre-hex historical suite",
    "ftr(id): associate test with a Feature Ticket (e.g. @pytest.mark.ftr('FTR-STYLE-THEMES'))",
    "slow: potentially slow tests kept outside the normal default slice",
    "smoke: small end-to-end or consumer-facing confidence checks",
    "current_state: tests that intentionally document current implementation shape or transitional behavior",
]

[tool.coverage.run]
branch = true
source = ["src/spreadsheet_handling"]
omit = [
  "*/tests/*",
  "*/__init__.py",
  "*/_version.py",
  "*/core/refs.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
check_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["openpyxl.*", "pandas.*"]
ignore_missing_imports = true
