[project]
name = "spreadsheet-handling"
version = "0.1.0"
description = "JSON ↔ spreadsheet converter with multi-level headers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "XlsxWriter",
  "openpyxl",
]

[project.scripts]
json2sheet = "spreadsheet_handling.cli.json2sheet:main"
sheet2json = "spreadsheet_handling.cli.sheet2json:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

