[project]
name = "spreadsheet-handling"
version = "0.1.0"
description = "JSON ↔ spreadsheet converter with multi-level headers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "XlsxWriter",
  "openpyxl",
]

[project.scripts]
json2sheet = "spreadsheet_handling.cli.json2sheet:main"
sheet2json = "spreadsheet_handling.cli.sheet2json:main"
sheets-pack = "spreadsheet_handling.cli.sheets_pack:main"
sheets-unpack = "spreadsheet_handling.cli.sheets_unpack:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spreadsheet_handling*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# E/F deckt PEP8-Fehler inkl. Indentation, F… = NameError/Import usw.
select = ["E", "F"]
# Black-kompatible Ignorierungen
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
# Wir lassen Black formatieren; Ruff kann aber auch formatieren, wenn du willst.
quote-style = "preserve"


