[project]
name = "spreadsheet-handling"
description = "JSON ↔ spreadsheet converter with multi-level headers"
readme = "README.md"
requires-python = ">=3.10"

# Version kommt automatisch aus Git-Tags (siehe [tool.setuptools_scm]).
dynamic = ["version"]

# Runtime-Abhängigkeiten (werden bei `pip install -e` installiert)
dependencies = [
  "pandas>=2.0",
  "XlsxWriter>=3.0",
  "openpyxl>=3.1",
]

# Zusätzliche, optionale Extras
[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
  "black>=24",
  "autopep8>=2",
  "pyyaml>=6",
]
ods = ["odfpy>=1.4.1"]

# Konsolen-Skripte
[project.scripts]
json2sheet   = "spreadsheet_handling.cli.json2sheet:main"
sheet2json   = "spreadsheet_handling.cli.sheet2json:main"
sheets-pack  = "spreadsheet_handling.cli.sheets_pack:main"
sheets-unpack= "spreadsheet_handling.cli.sheets_unpack:main"

# Build-Backend
[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

# Paketlayout (src/ Layout)
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spreadsheet_handling*"]

# (Optional) Version zur Laufzeit verfügbar machen:
# erzeugt src/spreadsheet_handling/_version.py mit __version__-Variable.
[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
write_to = "src/spreadsheet_handling/_version.py"
fallback_version = "0.0.0"

# ---- Tool-Konfigurationen ----

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Basis-Regeln (PEP8-Fehler & Name/Import)
select = ["E", "F"]
# Black-kompatible Ausnahmen
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
testpaths = ["scripts/spreadsheet_handling/tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["scripts/spreadsheet_handling/src/spreadsheet_handling"]
omit = [
  "*/tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

